bug: spacing-token-naming
The spacing token names missed an update, that is: `vf-spacing-r` should be `vf-spacing--r`

Also adds an issue where nested `.vf-content ul li > ul` didn't have a needed margin at the top.

--- a/components/vf-link-list/vf-link-list.scss
+++ b/components/vf-link-list/vf-link-list.scss
@@ -12,7 +12,7 @@
 
   .vf-list__item {
     @include set-type(body--l);
-    @include margin--block(bottom, map-get($vf-spacing-map, vf-spacing-l));
+    @include margin--block(bottom, map-get($vf-spacing-map, vf-spacing--l));
 
     align-items: center;
   }
@@ -74,7 +74,7 @@
   }
 
   .vf-links__item {
-    margin-bottom: map-get($vf-spacing-map, vf-spacing-s);
+    margin-bottom: map-get($vf-spacing-map, vf-spacing--s);
   }
 }
 
