--- a/components/vf-sass-config/mixins/_divider.scss
+++ b/components/vf-sass-config/mixins/_divider.scss
@@ -2,7 +2,7 @@
 
 @mixin divider() {
   background-color: set-ui-color(vf-ui-color--grey--light);
-  margin: 0 map-get($vf-spacing-map, vf-spacing-s);
+  margin: 0 map-get($vf-spacing-map, vf-spacing--s);
   height: 1px;
   border: none;
 }
